Ikke masker felter på db-entiteter
Denne ble mye større enn forventet, ettersom maskering
av felter tidligere ble gjort på db-entiteter, og de
maskerte entitetene videre benyttes i journalføring/pdf-generering.

I tillegg skal maskering utføres på DTO, og dermed fjernes
fra "hentAvtale"-metoden, men må dermed kalles i AvtaleController.